--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,14 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",  
+      "axios": "^0.19.0",
+    "react-spinners": "^0.5.13",
+     "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.3",
+    "react-toastify": "^5.3.2"
+
+
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +35,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3005",
+  "proxy": "http://localhost:4005",
   "resolutions": {
     "lodash": ">=4.17.13",
     "lodash.template": ">=4.5.0"
